Bump all the project/plugin deps to their latest versions. (#317)
* Updated the README.md.

* Bump all the project/plugin deps to their latest versions.

* Updated the use of javac-errorprone to latest.

* Fix various issues detected by errorprone.

* Disable error prone on Java 11 and below.